--- a/app/views/catalog/_show_header_default.html.erb
+++ b/app/views/catalog/_show_header_default.html.erb
@@ -1,5 +1,5 @@
 <% # bookmark/folder functions -%>
-<% if document['section_s'].nil? %>
+<% if document['tei_section_display'].nil? %>
   <%= render_document_heading(document, :tag => :h1) %>
 <% else %>
   <h1><%= catalogo_link(document) %></h1>
