--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,18 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
  *= require_self
  */
+
+@import "blacklight";
+@import "catalogo";
+@import "scaffolds";
+@import "versions";
+
+// components
+@import "components/mixins";
+@import "components/variables";
+@import "components/typography";
+@import "components/menu";
+@import "components/images";
+@import "components/section";
