--- a/app/views/catalog/_show_default_inner.html.erb
+++ b/app/views/catalog/_show_default_inner.html.erb
@@ -1,6 +1,7 @@
+<% doc_presenter = show_presenter(document) %>
 <% document_show_fields(document).each do |field_name, field| -%>
   <% if should_render_show_field? document, field %>
-      <dt class="blacklight-<%= field_name.parameterize %>"><%= render_document_show_field_label document, field: field_name %></dt>
-      <dd class="blacklight-<%= field_name.parameterize %>"><%= render_document_show_field_value document, field: field_name %></dd>
+    <dt class="blacklight-<%= field_name.parameterize %>"><%= render_document_show_field_label document, field: field_name %></dt>
+    <dd class="blacklight-<%= field_name.parameterize %>"><%= doc_presenter.field_value field_name %></dd>
   <% end -%>
 <% end -%>
