--- a/app/assets/stylesheets/components/_section.scss
+++ b/app/assets/stylesheets/components/_section.scss
@@ -2,8 +2,9 @@ section {
   width: 100%;
   display: inline-block;
   position: relative;
+}
 
-  &.what, &.about, &.why, &.partners {
-    background: $white;
-  }
+.wrap {
+  padding: 1rem;
+  width: 100%;
 }
