--- a/app/views/catalog/_show_header_default.html.erb
+++ b/app/views/catalog/_show_header_default.html.erb
@@ -2,5 +2,5 @@
 <% if document['tei_section_display'].nil? %>
   <%= render_document_heading(document, :tag => :h1) %>
 <% else %>
-  <h1><%= document['title_display'] %></h1>
+  <h1><%= render "pages/catalogo/item_#{document.id}" %></h1>
 <% end %>
