--- a/app/assets/stylesheets/components/_variables.scss
+++ b/app/assets/stylesheets/components/_variables.scss
@@ -14,4 +14,4 @@ $intro-heading: "Playfair Display", Georgia, serif;
 // bootstrap overrides
 $font-family-serif: "Cardo", Georgia, serif;
 $brand-primary: $black;
-$logo_image: 'cicognara-logo.svg' !default;
+$logo_image: image_path('cicognara-logo.svg') !default;
