--- a/app/views/_user_util_links.html.erb
+++ b/app/views/_user_util_links.html.erb
@@ -1,8 +1,8 @@
 <div class="navbar-right">
   <ul class="nav navbar-nav">
-    <li><a href="/about">About</a></li>
-    <li><a href="/partners">Partners</a></li>
-    <li><a href="/contact">Contact</a></li>
-    <li><a href="/news">News</a></li>
+    <li><%= link_to 'About', static_page_path('about') %></li>
+    <li><%= link_to 'Partners', static_page_path('partners') %></li>
+    <li><%= link_to 'Contact', static_page_path('contact') %></li>
+    <li><%= link_to 'News', static_page_path('news') %></li>
   </ul>
 </div>
