--- a/app/views/shared/_front_header.html.erb
+++ b/app/views/shared/_front_header.html.erb
@@ -1,10 +1,13 @@
 <body class="splash">
   <header>
       <ul>
-        <li><%= link_to 'About', static_page_path('about') %></li>
-        <li><%= link_to 'Partners', static_page_path('partners') %></li>
-        <li><%= link_to 'Contact', static_page_path('contact') %></li>
-        <li><%= link_to 'News', static_page_path('news') %></li>
+        <li class="banner"><%= link_to 'About', static_page_path('about'), class: 'banner' %></li>
+        <li class="banner"><%= link_to 'Partners', static_page_path('partners'), class: 'banner' %></li>
+        <li class="banner"><%= link_to 'Contact', static_page_path('contact'), class: 'banner' %></li>
+        <li class="banner"><%= link_to 'News', static_page_path('news'), class: 'banner' %></li>
+        <% if current_user %>
+          <li class="banner banner-right"><%= render partial: 'shared/admin_menu' %></li>
+        <% end %>
       </ul>
     </header>
     <section class="intro">
