new news items and  revised about page from Sandy

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,6 +29,7 @@
 @import "components/images";
 @import "components/menu";
 @import "components/navbar";
+@import "components/news";
 @import "components/record";
 @import "components/results";
 @import "components/section";
