--- a/app/views/pages/news.html.erb
+++ b/app/views/pages/news.html.erb
@@ -1,5 +1,16 @@
 <section id="news">
   <div class="wrap">
     <h1>Latest News</h1>
+    <div class="news-entry">
+      <h2>Cicognara at DLF</h2>
+      <p class="dateline">1 November 2016</p>
+      <p>Princeton's Sandra Brooke (Marquand Librarian) and Jon Stroop (Library Applications Development Manager) will be discussing the Digital Cicognara Library on November 7, 2016, in a IIIF-focused session at the <a href="https://www.diglib.org/forums/2016forum/">Digital Library Federation Forum</a> in Milwaukee, Wisconsin. <a href="https://dlfforum2016.sched.org/event/8LGE/m3b-iiif">"Uncommon Objects of Delight: Recreating Count Leopoldo Cicognara's Library"</a> will address the DCL’s academic goals and technical implementation and show how the project is leveraging Blacklight and the International Interoperability Framework technologies.</p>
+    </div>
+    <hr>
+    <div class="news-entry">
+      <h2>Cicognara at IFLA</h2>
+      <p class="dateline">8 August 2016</p>
+      <p><em>Worth a Thousand Words:  A Global Perspective on Image Description, Discovery, and Access</em>, a full day symposium at the <a href="http://2016.ifla.org/">IFLA World Library and Information Congress</a> in Columbus, Ohio, August 15, 2016, was the setting for a Cicognara talk by Kathleen Salomon (Assistant Director, Getty Research Institute) and Sandra Brooke (Marquand Librarian, Princeton). <a href="http://www.ifla.org/node/10802">"These Silent Witnesses of My Affections: A Collaborative Recreation of Count Leopoldo Cicognara’s Library"</a> described the projects scope and aims and set it within the context of the <a href="http://www.getty.edu/research/institute/development_collaborations/fab/">Future of Art Bibliography</a> and <a href="http://www.getty.edu/research/tools/portal/index.html">Getty Portal initiatives</a>.</p>
+    </div>
   </div>
 </section>
