Change PUL logo. Closes #187

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,15 +1,15 @@
 <footer>
   <section class="partners" id="partners">
     <ul>
-      <li><a href="https://www.vatlib.it/home.php" target="_blank"><%= image_tag 'vatican.png', alt: 'Biblioteca Apostolica Vaticana' %></a></li>
-      <li><a href="http://library.columbia.edu/" target="_blank"><%= image_tag 'columbia.png', alt: 'Columbia University Library' %></a></li>
-      <li><a href="http://www.frick.org/research/library" target="_blank"><%= image_tag 'frick.png', alt: 'Frick Art Reference Library' %></a></li>
-      <li><a href="https://www.getty.edu/research/" target="_blank"><%= image_tag 'getty.png', alt: 'Getty Research Institute' %></a></li>
-      <li><a href="http://library.harvard.edu/" target="_blank"><%= image_tag 'harvard.png', alt: 'Harvard University Library' %></a></li>
-      <li><a href="http://www.ub.uni-heidelberg.de/" target="_blank"><%= image_tag 'heidelberg.png', alt: 'Heidelberg University Library' %></a></li>
-      <li><a href="https://library.nga.gov/" target="_blank"><%= image_tag 'national.png', alt: 'National Gallery of Art Library' %></a></li>
-      <li><a href="http://library.princeton.edu/" target="_blank"><%= image_tag 'princeton.png', alt: 'Princeton University Library' %></a></li>
-      <li><a href="http://www.library.illinois.edu/" target="_blank"><%= image_tag 'illinois.png', alt: 'University of Illinois at Urbana-Champaign Library' %></a></li>
+      <li><a href="https://www.vatlib.it/home.php" target="_blank"><%= image_tag 'vatican.png', alt: 'Biblioteca Apostolica Vaticana', title: 'Biblioteca Apostolica Vaticana' %></a></li>
+      <li><a href="http://library.columbia.edu/" target="_blank"><%= image_tag 'columbia.png', alt: 'Columbia University Library', title: 'Columbia University Library' %></a></li>
+      <li><a href="http://www.frick.org/research/library" target="_blank"><%= image_tag 'frick.png', alt: 'Frick Art Reference Library', title: 'Frick Art Reference Library' %></a></li>
+      <li><a href="https://www.getty.edu/research/" target="_blank"><%= image_tag 'getty.png', alt: 'Getty Research Institute', title: 'Getty Research Institute' %></a></li>
+      <li><a href="http://library.harvard.edu/" target="_blank"><%= image_tag 'harvard.png', alt: 'Harvard University Library', title: 'Harvard University Library' %></a></li>
+      <li><a href="http://www.ub.uni-heidelberg.de/" target="_blank"><%= image_tag 'heidelberg.png', alt: 'Heidelberg University Library', title: 'Heidelberg University Library' %></a></li>
+      <li><a href="https://library.nga.gov/" target="_blank"><%= image_tag 'national.png', alt: 'National Gallery of Art Library', title: 'National Gallery of Art Library' %></a></li>
+      <li><a href="http://library.princeton.edu/" target="_blank"><%= image_tag 'princeton.png', alt: 'Princeton University Library', title: 'Princeton University Library' %></a></li>
+      <li><a href="http://www.library.illinois.edu/" target="_blank"><%= image_tag 'illinois.png', alt: 'University of Illinois at Urbana-Champaign Library', title: 'University of Illinois at Urbana-Champaign Library' %></a></li>
     </ul>
   </section>
   <section class="bottom">
