--- a/app/assets/stylesheets/components/_images.scss
+++ b/app/assets/stylesheets/components/_images.scss
@@ -63,15 +63,15 @@ img {
 
   ul {
     list-style: none;
-    display: inline-block;
     padding: 0;
+    text-align:center;
 
     li {
-      vertical-align: middle;
-      float: left;
-      display: inline;
-      padding: 1rem;
+      display: inline-block;
       max-height: 90px;
+      padding: 1rem;
+      position: relative;
+      text-align: center;
 
       img {
         width: auto;
