--- a/app/views/shared/_header_navbar.html.erb
+++ b/app/views/shared/_header_navbar.html.erb
@@ -1,3 +1,4 @@
+
 <div id="header-navbar" class="navbar navbar-inverse navbar-static-top" role="navigation">
   <div class="<%= container_classes %>">
     <div class="navbar-header">
@@ -14,7 +15,9 @@
       <%= render partial: 'shared/user_util_links' %>
     </div>
   </div>
+    <%= render :partial => 'shared/this_is_beta' %>
 </div>
+
 
 <div id="search-navbar" class="navbar navbar-default navbar-static-top" role="navigation">
   <div class="<%= container_classes %>">
