--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -10,6 +10,7 @@
       background-color: $input-bg;
       border-radius: $border-radius-base 0 0 $border-radius-base;
       width: 15ch;
+      padding-left: .5rem;
     }
   }
 }
