Index manifests and hide viewer when empty.
Closes #206.

--- a/app/views/catalog/_universal_viewer_default.html.erb
+++ b/app/views/catalog/_universal_viewer_default.html.erb
@@ -1,2 +1,4 @@
-<div class="uv viewer" data-uri="<%= document.manifest_url %>"></div>
-<%= PulUvRails::UniversalViewer.script_tag %>
+<% if document.manifests.present? %>
+  <div class="uv viewer" data-uri="<%= document.manifest_url %>"></div>
+  <%= PulUvRails::UniversalViewer.script_tag %>
+<% end %>
