new Gabinetto image

--- a/app/views/pages/news.html.erb
+++ b/app/views/pages/news.html.erb
@@ -1,3 +1,9 @@
+<!-- todo: Sandy wants this in somwhere:
+<figure class="right">
+  <%= image_tag 'vatican-library.jpg' %>
+  <figcaption>Biblioteca Apostolica Vaticana, Vatican Museums. Courtesy Scala / Art Resource, NY</figcaption>
+</figure>
+-->
 <section id="news">
   <div class="wrap">
     <h1>Latest News</h1>
