--- a/app/views/pages/news.html.erb
+++ b/app/views/pages/news.html.erb
@@ -2,6 +2,12 @@
 <section id="news">
   <div class="wrap">
     <h1>Latest News</h1>
+   <div class="news-entry">
+     <h2>Cicognara at ARLIS/NA</h2>
+     <p class="dateline">8 February 2017</p>
+     <p>Sandra Brooke (Princeton) and Roger Lawson (National Gallery of Art) will host a project update and open partners meeting at <a href="http://www.arlisna.org/neworleans2017/">ARLIS/NA's 45th Annual Conference</a> in New Orleans, Louisana.</p>
+   </div>
+   <hr>
     <div class="news-entry">
       <h2>Cicognara at DLF</h2>
       <p class="dateline">1 November 2016</p>
