Adding news item about symposium in Rome

--- a/app/assets/stylesheets/components/_news.scss
+++ b/app/assets/stylesheets/components/_news.scss
@@ -3,6 +3,9 @@
     text-align: left;
     margin-bottom: 0;
   }
+  li {
+    font-size: medium;
+  }
   .dateline {
     font-size: medium;
     font-weight: bold;
