--- a/app/views/pages/news.html.erb
+++ b/app/views/pages/news.html.erb
@@ -2,6 +2,24 @@
 <section id="news">
   <div class="wrap">
     <h1>Latest News</h1>
+    <div class="news-entry">
+      <h2>Cicognara Symposium in Rome, 5 October 2017</h2>
+      <h4>The Digital Cicognara Library: An Open-Access Collection of the Early Literature of Art</h4>
+      <p class="dateline">21 September 2017</p>
+      <p>Please join the partners and a panel of Cicognara scholars to discuss the project’s current status and its aspirations as a tool for discovery and research. 15:00-18:30 with reception following, AMERICAN UNIVERSITY OF ROME, AURIANA AUDITORIUM, Via Pietro Roselli 16, 00153 Roma RM</p>
+      <p>Speakers:
+        <ul>
+          <li>Timothy Janz, Biblioteca Apostolica Vaticana</li>
+          <li>Adriano Aymonino, University of Buckingham</li>
+          <li>Francesco Benelli, Università di Bologna</li>
+          <li>Jeanne-Marie Musto, City University of New York</li>
+          <li>Silvia Vantaggiato, Università del Salento</li>
+          <li>Esmé Cowles, Princeton University</li>
+          <li>Sandra Ludig Brooke, Princeton University</li>
+        </ul>
+      </p>
+   </div>
+   <hr>
    <div class="news-entry">
      <h2>Cicognara at ARLIS/NA</h2>
      <p class="dateline">8 February 2017</p>
