Updating form styling and workflow

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,7 @@
 @import "components/catalogo__item";
 @import "components/facets";
 @import "components/footer";
+@import "components/edit";
 @import "components/form__contact";
 @import "components/forms";
 @import "components/images";
