--- a/app/views/versions/show.html.erb
+++ b/app/views/versions/show.html.erb
@@ -1,4 +1,4 @@
-<table>
+<table class="table">
   <tr>
     <td><%= label_tag :label %></td>
     <td><%= @version.label %></td>
@@ -57,7 +57,6 @@
   </tr>
 </table>
 
-<%= link_to 'Back to Book', book_path(@book) %> |
-<%= link_to 'All Versions', book_versions_path(@book) %> |
-<%= link_to 'Edit', edit_book_version_path(@book, @version) %> |
-<%= link_to 'Destroy', book_version_path(@book, @version), method: :delete, data: { confirm: 'Are you sure?' } %>
+<%= link_to 'Back to Book', book_path(@book), class: 'btn btn-default' %>
+<%= link_to 'Edit', edit_book_version_path(@book, @version), class: 'btn btn-primary' %>
+<%= link_to 'Destroy', book_version_path(@book, @version), class: 'btn btn-danger', method: :delete, data: { confirm: 'Are you sure?' } %>
