Use custom error pages

--- a/app/assets/stylesheets/components/_alerts.scss
+++ b/app/assets/stylesheets/components/_alerts.scss
@@ -41,3 +41,10 @@ main > .container .flash_messages {
     margin: 0;
   }
 }
+
+h2.error {
+  margin: 15px 25%;
+}
+p.error {
+  margin: 15px 25% 25%;
+}
