Adding news entry for ARLIS 2018

--- a/app/views/pages/news.html.erb
+++ b/app/views/pages/news.html.erb
@@ -3,6 +3,12 @@
   <div class="wrap">
     <h1>Latest News</h1>
     <div class="news-entry">
+      <h2>Cicognara at ARLIS/NA</h2>
+      <p class="dateline">27 February 2018</p>
+      <p>Alexandra Büttner and Roger Lawson (National Gallery of Art) will host a project update and open partners meeting at <a href="http://sched.co/Cxi7">ARLIS/NA's 46th Annual Conference</a> in New York.</p>
+   </div>
+   <hr>
+    <div class="news-entry">
       <h2>Cicognara Symposium in Rome, 5 October 2017</h2>
       <h4>The Digital Cicognara Library: An Open-Access Collection of the Early Literature of Art</h4>
       <p class="dateline">21 September 2017</p>
