Adding news entry for PhD studentship opportunity

--- a/app/views/pages/news.html.erb
+++ b/app/views/pages/news.html.erb
@@ -3,6 +3,12 @@
   <div class="wrap">
     <h1>Latest News</h1>
     <div class="news-entry">
+      <h2>Comparison of the Eastlake Library and the Cicognara Library</h2>
+      <p class="dateline">20 April 2018</p>
+      <p>Please note the advertisement for the <a href="http://www.ahrc-cdp.org/phd-studentship-art-history-scholarship-between-the-1820s-and-the-1870s-the-role-of-the-eastlake-library-at-the-national-gallery-with-the-national-gallery-london-and-robert-gordo/">PhD Studentship: 'Art history scholarship between the 1820s and the 1870s: the role of the Eastlake Library at the National Gallery'</a> with the National Gallery, London, and Robert Gordon University, Aberdeen.</p>
+   </div>
+   <hr>
+    <div class="news-entry">
       <h2>Cicognara at ARLIS/NA</h2>
       <p class="dateline">27 February 2018</p>
       <p>Alexandra Büttner and Roger Lawson (National Gallery of Art) will host a project update and open partners meeting at <a href="http://sched.co/Cxi7">ARLIS/NA's 46th Annual Conference</a> in New York.</p>
