News item: presentations at IIIF

--- a/app/views/pages/news.html.erb
+++ b/app/views/pages/news.html.erb
@@ -3,6 +3,12 @@
   <div class="wrap">
     <h1>Latest News</h1>
     <div class="news-entry">
+      <h2>Cicognara at IIIF</h2>
+      <p class="dateline">25 May 2018</p>
+      <p>Roger Lawson (National Gallery of Art) and Esmé Cowles (Princeton University Library) presented on various aspects of the project at the 2018 <a href="http://iiif.io/event/2018/washington/">IIIF Conference</a> in Washington, DC.  Roger presented an overview of the project as part of the session <a href="http://iiif.io/event/2018/washington/program/paper-20/">Uses of IIIF at the National Gallery of Art</a>, and Esmé discussed how the Digital Cicognara Library fits into Princeton's overall IIIF ecosystem in the session <a href="http://iiif.io/event/2018/washington/program/paper-49/">IIIF Integration Between (and Within) Applications</a> (<a href="http://bit.ly/iiif-within-between">slides</a>).</p>
+    </div>
+    <hr>
+    <div class="news-entry">
       <h2>Comparison of the Eastlake Library and the Cicognara Library</h2>
       <p class="dateline">20 April 2018</p>
       <p>Please note the advertisement for the <a href="http://www.ahrc-cdp.org/phd-studentship-art-history-scholarship-between-the-1820s-and-the-1870s-the-role-of-the-eastlake-library-at-the-national-gallery-with-the-national-gallery-london-and-robert-gordo/">PhD Studentship: 'Art history scholarship between the 1820s and the 1870s: the role of the Eastlake Library at the National Gallery'</a> with the National Gallery, London, and Robert Gordon University, Aberdeen.</p>
