Adding two news items

--- a/app/views/pages/news.html.erb
+++ b/app/views/pages/news.html.erb
@@ -3,6 +3,18 @@
   <div class="wrap">
     <h1>Latest News</h1>
     <div class="news-entry">
+      <h2>Call for Papers: Historic Libraries and the Early Historiography of Art</h2>
+      <p class="dateline">5 July 2018</p>
+      <p>Seeking papers for a session on "Historic Libraries &amp; the Early Historiography of Art" at the <a href="http://www.collegeart.org/programs/conference/">CAA Annual Conference 2019</a> in New York, February 13 - 16, 2019. For more information see <a href="https://blog.arthistoricum.net/beitrag/2018/07/02/call-for-papers-historic-libraries-and-the-early-historiography-of-art/">Call for Papers</a>. Deadline for papers: August 6 2018</p>
+    </div>
+    <hr>
+    <div class="news-entry">
+      <h2>ARLIS UK &amp; IRELAND 2018: Museum libraries and library history</h2>
+      <p class="dateline">5 July 2018</p>
+      <p>On Friday July 27th 2018 Jonathan Franklin (The National Gallery, London) is giving a talk on "<a href="https://arlislondon.wixsite.com/arlislondon2018/franklin">Museum libraries and library history: joining the research conversation at the National Gallery</a>".  He will present the “founding library” of the National Gallery in London acquired in 1870 from the widow of its first Director, Sir Charles Eastlake (1793-1865), and touch amongst others on the library of Sir Eastlake's contemporary, Count Leopoldo Cicognara (1767-1834).</p>
+    </div>
+    <hr>
+    <div class="news-entry">
       <h2>Cicognara at IIIF</h2>
       <p class="dateline">25 May 2018</p>
       <p>Roger Lawson (National Gallery of Art) and Esmé Cowles (Princeton University Library) presented on various aspects of the project at the 2018 <a href="http://iiif.io/event/2018/washington/">IIIF Conference</a> in Washington, DC.  Roger presented an overview of the project as part of the session <a href="http://iiif.io/event/2018/washington/program/paper-20/">Uses of IIIF at the National Gallery of Art</a>, and Esmé discussed how the Digital Cicognara Library fits into Princeton's overall IIIF ecosystem in the session <a href="http://iiif.io/event/2018/washington/program/paper-49/">IIIF Integration Between (and Within) Applications</a> (<a href="http://bit.ly/iiif-within-between">slides</a>).</p>
