--- a/app/views/shared/_front_header.html.erb
+++ b/app/views/shared/_front_header.html.erb
@@ -5,6 +5,9 @@
         <li class="banner"><%= link_to 'Partners', static_page_path('partners'), class: 'banner' %></li>
         <li class="banner"><%= link_to 'Contact', static_page_path('contact'), class: 'banner' %></li>
         <li class="banner"><%= link_to 'News', static_page_path('news'), class: 'banner' %></li>
+        <li class="banner"><%= link_to 'https://twitter.com/DigiCicognara', class: 'banner' do %>
+          <%= image_tag('twitter.png', title: 'Twitter') %>
+        <% end %></li>
         <% if current_user %>
           <li class="banner banner-right"><%= render partial: 'shared/admin_menu' %></li>
         <% end %>
