--- a/app/views/shared/_user_util_links.html.erb
+++ b/app/views/shared/_user_util_links.html.erb
@@ -4,6 +4,10 @@
     <li><%= link_to 'Partners', static_page_path('partners') %></li>
     <li><%= link_to 'Contact', static_page_path('contact') %></li>
     <li><%= link_to 'News', static_page_path('news') %></li>
+    <li class="banner"><%= link_to 'https://twitter.com/DigiCicognara' do %>
+      <%= image_tag('twitter.png', title: 'Twitter') %>
+    <% end %></li>
+
     <% if current_user %>
       <li><%= render partial: 'shared/admin_menu' %></li>
     <% end %>
