--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,7 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *= require mirador
  *= require_self
  */
 
@@ -18,6 +19,7 @@
 
 @import "blacklight";
 @import "scaffolds";
+@import "mirador";
 
 // components
 @import "components/catalogo__browse";
