--- a/app/views/shared/_front_header.html.erb
+++ b/app/views/shared/_front_header.html.erb
@@ -3,6 +3,7 @@
       <ul>
         <li class="banner"><%= link_to 'About', static_page_path('about'), class: 'banner' %></li>
         <li class="banner"><%= link_to 'Partners', static_page_path('partners'), class: 'banner' %></li>
+        <li class="banner"><%= link_to 'Community', static_page_path('community'), class: 'banner' %></li>
         <li class="banner"><%= link_to 'Contact', static_page_path('contact'), class: 'banner' %></li>
         <li class="banner"><%= link_to 'News', static_page_path('news'), class: 'banner' %></li>
         <li class="banner"><%= link_to 'https://twitter.com/DigiCicognara', class: 'banner' do %>
