--- a/app/views/shared/_user_util_links.html.erb
+++ b/app/views/shared/_user_util_links.html.erb
@@ -2,6 +2,7 @@
   <ul class="nav navbar-nav">
     <li><%= link_to 'About', static_page_path('about') %></li>
     <li><%= link_to 'Partners', static_page_path('partners') %></li>
+    <li><%= link_to 'Community', static_page_path('community') %></li>
     <li><%= link_to 'Contact', static_page_path('contact') %></li>
     <li><%= link_to 'News', static_page_path('news') %></li>
     <li class="banner"><%= link_to 'https://twitter.com/DigiCicognara' do %>
