--- a/app/views/shared/_front_header.html.erb
+++ b/app/views/shared/_front_header.html.erb
@@ -20,7 +20,7 @@
             <h1>The Digital Cicognara Library <span class="small"><span class="italic">An</span> Open-Access Collection <span class="italic">of the</span> Early Literature of the Arts</span></h1>
             <div class="search-browse--home">
               <%= render_search_bar  %>
-              <%= link_to 'Browse the Catalogo', browse_catalogo_path, class: 'btn btn-primary browse-catalogo' %>
+              <%= link_to 'Browse full Catalogo', browse_catalogo_path, class: 'btn btn-primary browse-catalogo' %>
             </div>
           </div>
         </div>
