--- a/app/views/catalog/_index_links_default.html.erb
+++ b/app/views/catalog/_index_links_default.html.erb
@@ -1,7 +1,7 @@
 <div class="view-links col-md-12">
   <% counter = document_counter_with_offset(document_counter) %>
     <%= link_to 'Browse full Catalogo', catalogo_link(document), class: 'btn btn-xs btn-default' %>
-    <% ['Microfiche', 'Matching Copy'].each do |val| %>
+    <% ['Microfiche', 'Matching copy'].each do |val| %>
       <% if document['digitized_version_available_facet']&.include?(val) %>
         <span class="digitized-<%= val.downcase %> label label-<%= val == 'Microfiche' ? 'default' : 'success' %>">
           <%= val %>
