--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,7 @@
 // components
 @import "components/catalogo__browse";
 @import "components/catalogo__item";
+@import "components/comments";
 @import "components/community";
 @import "components/facets";
 @import "components/footer";
