--- a/app/views/versions/show.html.erb
+++ b/app/views/versions/show.html.erb
@@ -5,7 +5,7 @@
   </tr>
   <tr>
     <td><%= label_tag :manifest %></td>
-    <td><%= link_to @version.manifest, @version.manifest %></td>
+    <td><%= version_iiif_manifest_link %></td>
   </tr>
   <tr>
     <td><%= label_tag :contributing_library %></td>
@@ -57,6 +57,6 @@
   </tr>
 </table>
 
-<%= link_to 'Back to Volume', volume_path(@volume), class: 'btn btn-default' %>
-<%= link_to 'Edit', edit_volume_version_path(@volume, @version), class: 'btn btn-primary' %>
-<%= link_to 'Destroy', volume_version_path(@volume, @version), class: 'btn btn-danger', method: :delete, data: { confirm: 'Are you sure?' } %>
+<%= link_to 'Back to Book', book_path(@version.volume.book), class: 'btn btn-default' %>
+<%= link_to 'Edit', edit_book_volume_version_path(@version.volume.book, @version.volume, @version), class: 'btn btn-primary' %>
+<%= link_to 'Destroy', book_volume_version_path(@version.volume.book, @version.volume, @version), class: 'btn btn-danger', method: :delete, data: { confirm: 'Are you sure?' } %>
