Implements MarcRecord as an ActiveRecord Model; Assigns a one-to-one relationship between Books and MarcRecords; Delegates Digital Cicognara Library (DCL) Numbers for Books to MarcRecords; Ensures that there can be multiple DCL Numbers per MarcRecord (and, by relation, Book); Ensures that ARKs are indexed for MarcRecords and Books; Uses XPaths to MARC XML elements to resolve individual MARC record entities; Adds Rake tasks for purging the Solr collection of Documents and running a Solr development environment

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,6 @@
 <h1>Book</h1>
 
-<p>Digital Cicognara Number: <%= @book.digital_cico_number %></p>
+<p>Digital Cicognara Numbers: <%= @book.digital_cico_numbers.join(', ') %></p>
 
 <table class="table table-striped">
   <thead>
